Add vulkan to GPU ci

--- a/.github/workflows/gpu.yml
+++ b/.github/workflows/gpu.yml
@@ -37,8 +37,7 @@ jobs:
 
     - name: Build (CUDA)
       run: cargo build --verbose --no-default-features --features cuda
-
-  build-both:
+  build-vulkan:
 
     runs-on: self-hosted
 
@@ -49,8 +48,24 @@ jobs:
         profile: minimal
         toolchain: stable
 
-    - name: Build (CUDA)
+    - name: Build (Vulkan)
+      run: cargo build --verbose --no-default-features --features vulkan
+
+  build-all:
+
+    runs-on: self-hosted
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+
+    - name: Build (cuda,opencl)
       run: cargo build --verbose --no-default-features --features cuda,opencl
+    - name: Build (all)
+      run: cargo build --verbose --no-default-features --features cuda,opencl,vulkan
       
   test-opencl:
   
@@ -101,6 +116,31 @@ jobs:
       run: cargo test --verbose --no-default-features --features cuda,cpu
     - name: Run tests (CUDA, modules)
       run: cargo test --verbose --no-default-features --features cuda,autograd,graph,cpu
+  
+  test-vulkan:
+  
+    runs-on: self-hosted
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+
+    - name: Run tests (vulkan)
+      run: cargo test --verbose --no-default-features --featuresvulkan 
+    - name: Run tests (vulkan, lazy)
+      run: cargo test --verbose --no-default-features --features vulkan,lazy
+    - name: Run tests (vulkan, autograd)
+      run: cargo test --verbose --no-default-features --features vulkan,autograd
+    - name: Run tests (vulkan, graph)
+      run: cargo test --verbose --no-default-features --features vulkan,graph
+    - name: Run tests (vulkan, cpu)
+      run: cargo test --verbose --no-default-features --features vulkan,cpu
+    - name: Run tests (vulkan, modules)
+      run: cargo test --verbose --no-default-features --features vulkan,autograd,graph,cpu
 
   test-all:
   
@@ -114,11 +154,11 @@ jobs:
         profile: minimal
         toolchain: stable
 
-    - name: Run tests (CUDA, OpenCL)
-      run: cargo test --verbose --no-default-features --features cuda,opencl
-    - name: Run tests (CUDA, OpenCL, lazy)
-      run: cargo test --verbose --no-default-features --features cuda,opencl,lazy
-    - name: Run tests (CUDA, OpenCL, autograd)
-      run: cargo test --verbose --no-default-features --features cuda,opencl,autograd
-    - name: Run tests (CUDA, OpenCL, graph)
-      run: cargo test --verbose --no-default-features --features cuda,opencl,graph
+    - name: Run tests (CUDA, OpenCL, vulkan)
+      run: cargo test --verbose --no-default-features --features cuda,opencl,vulkan
+    - name: Run tests (CUDA, OpenCL, lazy, vulkan)
+      run: cargo test --verbose --no-default-features --features cuda,opencl,lazy,vulkan
+    - name: Run tests (CUDA, OpenCL, autograd, vulkan)
+      run: cargo test --verbose --no-default-features --features cuda,opencl,autograd,vulkan
+    - name: Run tests (CUDA, OpenCL, graph, vulkan)
+      run: cargo test --verbose --no-default-features --features cuda,opencl,graph,vulkan
