--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "lazy", "autograd", "opencl", "vulkan"]
+default = ["vulkan"]
 # default = []
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
@@ -76,7 +76,7 @@ graph = ["std"]
 
 half = ["dep:half"]
 
-vulkan = ["std", "dep:ash", "dep:naga", "wgsl"]
+vulkan = ["std", "dep:ash", "dep:naga", "wgsl", "cpu"]
 wgsl = []
 
 serde = ["dep:serde"]
