Ad cfg feature graph to op hint unary chain perf ocl test

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -171,7 +171,7 @@ jobs:
 
     - uses: Swatinem/rust-cache@v1
 
-    - name: Run 'autograd' tests
+    - name: Run 'no-std' tests
       run: cargo test --no-default-features --features no-std
   
 
