--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "vulkan", "cuda"]
+default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "vulkan", "cuda", "untyped"]
 # default = []
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
@@ -69,6 +69,7 @@ no-std = ["stack", "dep:libm"]
 macro = ["dep:custos-macro"]
 # nnapi = ["std", "dep:nnapi", "dep:ndk-sys", "lazy"]
 nnapi = ["std", "dep:nnapi", "lazy"]
+untyped = []
 
 # modules
 autograd = ["std", "cached", "lazy"]
