--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,8 +51,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped"]
-# default = []
+# default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "cuda", "half"]
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
 std = []
