Fix roughly_eq_slices usages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,8 +51,8 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-# default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "cuda", "half"]
-default = ["untyped", "half", "lazy", "stack"]
+default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "cuda", "half"]
+# default = ["untyped", "half", "lazy", "stack"]
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
 std = []
