Fix rust.yml workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -123,6 +123,24 @@ jobs:
     - name: Run 'stack' tests
       run: cargo test --no-default-features --features stack,cpu
   
+  test-untyped:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+
+    - uses: Swatinem/rust-cache@v1
+
+    - name: Run 'untyped' device tests
+      run: cargo test --no-default-features --features untyped,half
+
+
   test-static-api:
   
     runs-on: ubuntu-latest
@@ -174,7 +192,7 @@ jobs:
     - name: Run 'no-std' tests
       run: cargo test --no-default-features --features no-std
    
-   test-half:
+  test-half:
   
     runs-on: ubuntu-latest
     
@@ -193,7 +211,6 @@ jobs:
     - name: Run 'half' tests
       run: cargo test --no-default-features --features half,std
   
-
   miri:
     name: "Miri"
     runs-on: ubuntu-latest
