Add event list param (set to none)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,13 +46,13 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 
 [build-dependencies]
-#min-cl = { path="../min-cl", optional=true }
+# min-cl = { path="../min-cl", optional=true }
 min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "cuda", "half", "vulkan"]
-# default = ["opencl" ]
+# default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "cuda", "half", "vulkan"]
+default = ["opencl" ]
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
 std = []
