Add rust cache to GPU actions

--- a/.github/workflows/gpu.yml
+++ b/.github/workflows/gpu.yml
@@ -21,6 +21,8 @@ jobs:
         profile: minimal
         toolchain: stable
 
+    - uses: Swatinem/rust-cache@v2
+
     - name: Build (OpenCL)
       run: cargo build --verbose --no-default-features --features opencl
   
@@ -34,6 +36,7 @@ jobs:
       with:
         profile: minimal
         toolchain: stable
+    - uses: Swatinem/rust-cache@v2
 
     - name: Build (CUDA)
       run: cargo build --verbose --no-default-features --features cuda
@@ -48,6 +51,7 @@ jobs:
         profile: minimal
         toolchain: stable
 
+    - uses: Swatinem/rust-cache@v2
     - name: Build (Vulkan)
       run: cargo build --verbose --no-default-features --features vulkan
 
@@ -61,6 +65,7 @@ jobs:
       with:
         profile: minimal
         toolchain: stable
+    - uses: Swatinem/rust-cache@v2
 
     - name: Build (cuda,opencl)
       run: cargo build --verbose --no-default-features --features cuda,opencl
@@ -78,6 +83,7 @@ jobs:
       with:
         profile: minimal
         toolchain: stable
+    - uses: Swatinem/rust-cache@v2
 
     - name: Run tests (OpenCL)
       run: cargo test --verbose --no-default-features --features opencl
@@ -103,6 +109,7 @@ jobs:
       with:
         profile: minimal
         toolchain: stable
+    - uses: Swatinem/rust-cache@v2
 
     - name: Run tests (CUDA)
       run: cargo test --verbose --no-default-features --features cuda
@@ -128,6 +135,7 @@ jobs:
       with:
         profile: minimal
         toolchain: stable
+    - uses: Swatinem/rust-cache@v2
 
     - name: Run tests (vulkan)
       run: cargo test --verbose --no-default-features --features vulkan 
@@ -153,6 +161,7 @@ jobs:
       with:
         profile: minimal
         toolchain: stable
+    - uses: Swatinem/rust-cache@v2
 
     - name: Run tests (CUDA, OpenCL, vulkan)
       run: cargo test --verbose --no-default-features --features cuda,opencl,vulkan
