--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
     - name: Build
@@ -33,7 +33,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -46,7 +46,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -70,7 +70,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -101,7 +101,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -115,7 +115,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -130,7 +130,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -144,7 +144,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -158,7 +158,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
@@ -172,7 +172,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: rustup toolchain install stable --profile minimal
+    - uses: dtolnay/rust-toolchain@stable
 
     - uses: Swatinem/rust-cache@v2
 
