--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ libm = { version="0.2.6", optional = true }
 ash = { version = "0.37", optional = true } 
 # naga = { version = "0.19", features = ["wgsl-in"], optional = true } 
 naga = { git = "https://github.com/elftausend/wgpu", features = ["wgsl-in"], optional = true }
+# naga = {path = "../wgpu/naga", features = ["wgsl-in"], optional = true}
 
 half = {version = "2.3", default-features = false, optional = true}
 
@@ -70,7 +71,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["nnapi", "cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "cuda", "half", "vulkan", "macro", "webgl"]
+default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "half", "vulkan", "macro", "webgl"]
 # default = ["no-std"]
 # default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json"]
 
