--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 [features]
 # default = ["cpu", "lazy", "fork", "graph", "opencl", "cached", "autograd", "stack", "untyped", "half", "macro", "static-api"]
 # default = ["no-std"]
-default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack"]
+default = ["cpu", "lazy", "static-api", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "vulkan"]
 
 std = []
 
