--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,8 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 [features]
 default = ["cpu", "opencl", "cuda", "blas", "static-api", "stack", "macro", "nnapi", "untyped", "autograd", "autograd", "cached", "lazy", "fork", "graph", "serde"]
 # default = ["no-std"]
-# default = ["cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "nnapi", "vulkan"]
+# default = ["cuda"]
+# default = ["cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack"]
 
 std = []
 
