--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "opencl", "cuda", "blas", "static-api", "stack", "macro", "nnapi", "untyped", "autograd", "autograd", "cached", "lazy", "fork", "graph", "serde"]
+default = ["cpu", "opencl", "blas", "static-api", "stack", "macro", "nnapi", "autograd", "autograd", "cached", "lazy", "fork", "graph", "serde"]
 # default = ["no-std"]
 # default = ["cuda"]
 # default = ["cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack"]
