--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # default = ["cpu", "opencl", "cuda", "blas", "static-api", "stack", "macro", "nnapi", "untyped", "autograd", "autograd", "cached", "lazy", "fork", "graph", "serde"]
 # default = ["no-std"]
 # default = ["cpu"]
-default = ["untyped", "cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "opencl", "cuda", "vulkan"]
+default = ["untyped", "cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "opencl", "cuda"]
 
 std = []
 
