--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,8 +53,8 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 [features]
 # default = ["cpu", "opencl", "cuda", "blas", "static-api", "stack", "macro", "nnapi", "untyped", "autograd", "autograd", "cached", "lazy", "fork", "graph", "serde"]
 # default = ["no-std"]
-default = ["vulkan", "lazy", "autograd", "cpu", "opencl", "cuda"]
-# default = ["untyped", "cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "opencl", "cuda", "vulkan"]
+# default = [ "cpu", "lazy", "autograd", ]
+default = ["untyped", "cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "opencl", "cuda", "vulkan"]
 
 
 std = []
