--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 
 [features]
 # default = ["cpu", "opencl", "cuda", "blas", "static-api", "stack", "macro", "nnapi", "untyped", "autograd", "autograd", "cached", "lazy", "fork", "graph", "serde"]
-default = ["cpu", "untyped", "lazy", "graph", "opencl", "cached", "autograd", "cuda"]
+default = ["cpu", "untyped", "lazy", "graph", "cached", "autograd", "cuda", "vulkan"]
 # default = ["opencl"]
 # default = ["untyped", "cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "opencl", "nnapi"]
 
