--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 
 [features]
 # default = ["cpu", "opencl", "blas", "static-api", "stack", "macro", "untyped", "autograd", "autograd", "cached", "lazy", "fork", "graph"]
-default = ["cpu"]
+default = ["cpu", "cached"]
 
 std = []
 
