--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ rust-version = "1.81"
 [dependencies]
 #cuwanto-client = { path = "../cuwanto/cuwanto-client", optional = true }
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { git = "https://github.com/elftausend/min-cl", optional=true}
+min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 # min-cl = { path="../min-cl", optional=true }
 
@@ -24,16 +24,16 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional=true}
 # wgpu = {version="0.15", optional=true }
 
 # custos-macro = {path = "../custos-macro", optional=true}
-custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
+custos-macro = { git = "https://github.com/elftausend/custos-macro", optional = true }
 #custos-macro = {version = "0.1.1", optional=true}
 
 # no-std float math
-libm = { version="0.2.6", optional = true }
+libm = { version = "0.2.6", optional = true }
 
 ash = { version = "0.38", optional = true }
 naga = { version = "0.19", features = ["wgsl-in", "spv-out"], optional = true }
 
-half = {version = "2.3", default-features = false, optional = true}
+half = { version = "2.3", default-features = false, optional = true }
 
 # nnapi
 # nnapi = { path = "../nnapi/nnapi", optional = true}
@@ -51,7 +51,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "blas", "static-api", "macro", "cached", "autograd", "cuda", "vulkan", "stack"]
+default = ["cpu", "blas", "static-api", "macro", "cached", "autograd", "vulkan", "stack"]
 
 # default = ["cpu"]
 # default = ["no-std"]
@@ -91,7 +91,7 @@ serde = ["dep:serde"]
 json = ["dep:serde_json"]
 
 [dev-dependencies]
-custos-macro = {git = "https://github.com/elftausend/custos-macro"}
+custos-macro = { git = "https://github.com/elftausend/custos-macro" }
 serde_test = "1"
 # custos-macro = {path = "../custos-macro"}
 #custos-macro = {version = "0.1.1"}
