--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 # min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "blas", "static-api", "macro", "cached", "autograd", "cuda", "vulkan", "stack"]
+default = ["cpu", "static-api", "macro", "cached", "autograd", "cuda", "stack"]
 
 # default = ["cpu"]
 # default = ["no-std"]
