--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,8 +53,8 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 [features]
 # default = ["cpu", "blas", "static-api", "macro", "cached", "autograd", "stack", "opencl", "fork", "graph", "untyped"]
 
-default = ["cpu", "cached", "cuda", "opencl", "fork", "autograd", "static-api", "macro", "serde", "untyped", "nnapi"]
-# default = ["no-std"]
+# default = ["cpu", "cached", "cuda", "opencl", "fork", "autograd", "static-api", "macro", "serde", "untyped", "nnapi"]
+default = ["stack", "cpu"]
 # default = ["opencl"]
 # default = ["untyped", "cpu", "lazy", "graph", "autograd", "fork", "serde", "json", "half", "cached", "static-api", "stack", "opencl", "nnapi"]
 
